--- a/src/main/resources/property/mail.properties
+++ b/src/main/resources/property/mail.properties
@@ -1,2 +1,2 @@
-mail.login = yulyaerafova92@gmail.com
-mail.password = 968686968686
+mail.login = yulyaevrafova92@gmail.com
+mail.password = gxoeapbcgeelsyqq
